# pro_budget

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
pro_budget/: hooks.py  modules.txt
pro_budget/config/: desktop.py  docs.py
pro_budget/events/: budget.py
pro_budget/pro_budget/custom/: budget.json  budget_account.json  monthly_distribution_percentage.json
pro_budget/pro_budget/doctype/budget_account_monthly_distribution/: budget_account_monthly_distribution.js  budget_account_monthly_distribution.json  budget_account_monthly_distribution.py  test_budget_account_monthly_distribution.py
pro_budget/public/js/doctype/: budget.js  monthly_distribution.js
